src/main/java/org/sikongsphere/ifc/parser/IFCParser.java
/*
 * Copyright 2022 SikongSphere
 *
 * This program is free software; you can redistribute it and/or modify it under the terms of the
 * GNU General Public License version 2 as published by the Free Software Foundation.
 *
 * This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without
 * even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
 * General Public License for more details.
*/
package org.sikongsphere.ifc.parser;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({ "all", "warnings", "unchecked", "unused", "cast" })
public class IFCParser extends Parser {
    static {
        RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION);
    }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
        new PredictionContextCache();
    public static final int T__0 = 1, T_DATA = 2, T_END = 3, T_ENDSEC = 4, T_FALSE = 5,
        T_FILE_DESCRIPTION = 6, T_FILE_NAME = 7, T_FILE_SCHEMA = 8, T_HEADER = 9, T_NULL = 10,
        T_TRUE = 11, T_ISO_10303_21 = 12, T_ADD = 13, T_COLON = 14, T_COMMA = 15, T_PIPE = 16,
        T_DIV = 17, T_DOT = 18, T_DOT2 = 19, T_DOLLAR = 20, T_EQUAL = 21, T_EQUAL2 = 22,
        T_NOTEQUAL = 23, T_NOTEQUAL2 = 24, T_GREATER = 25, T_GREATEREQUAL = 26, T_LESS = 27,
        T_LESSEQUAL = 28, T_MUL = 29, T_OPEN_B = 30, T_OPEN_P = 31, T_OPEN_SB = 32, T_CLOSE_B = 33,
        T_CLOSE_P = 34, T_CLOSE_SB = 35, T_SEMICOLON = 36, T_SUB = 37, T_WELL = 38, L_ID = 39,
        L_S_STRING = 40, L_D_STRING = 41, L_INT = 42, L_DEC = 43, L_WS = 44, L_M_COMMENT = 45,
        L_S_COMMENT = 46, L_FILE = 47;
    public static final int RULE_ifcmodel = 0, RULE_header = 1, RULE_data = 2, RULE_dataItem = 3,
        RULE_isoTag = 4, RULE_expr = 5, RULE_exprAtom = 6, RULE_exprFunc = 7, RULE_exprFuncParams =
            8, RULE_funcParam = 9, RULE_ident = 10, RULE_string = 11, RULE_intNumber = 12,
        RULE_decNumber = 13, RULE_scientificCountingNumber = 14, RULE_boolLiteral = 15,
        RULE_nullConst = 16;

    private static String[] makeRuleNames() {
        return new String[] {
            "ifcmodel",
            "header",
            "data",
            "dataItem",
            "isoTag",
            "expr",
            "exprAtom",
            "exprFunc",
            "exprFuncParams",
            "funcParam",
            "ident",
            "string",
            "intNumber",
            "decNumber",
            "scientificCountingNumber",
            "boolLiteral",
            "nullConst" };
    }

    public static final String[] ruleNames = makeRuleNames();

    private static String[] makeLiteralNames() {
        return new String[] {
            null,
            "'E'",
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            "'+'",
            "':'",
            "','",
            "'||'",
            "'/'",
            "'.'",
            "'..'",
            "'$'",
            "'='",
            "'=='",
            "'<>'",
            "'!='",
            "'>'",
            "'>='",
            "'<'",
            "'<='",
            "'*'",
            "'{'",
            "'('",
            "'['",
            "'}'",
            "')'",
            "']'",
            "';'",
            "'-'",
            "'#'" };
    }

    private static final String[] _LITERAL_NAMES = makeLiteralNames();

    private static String[] makeSymbolicNames() {
        return new String[] {
            null,
            null,
            "T_DATA",
            "T_END",
            "T_ENDSEC",
            "T_FALSE",
            "T_FILE_DESCRIPTION",
            "T_FILE_NAME",
            "T_FILE_SCHEMA",
            "T_HEADER",
            "T_NULL",
            "T_TRUE",
            "T_ISO_10303_21",
            "T_ADD",
            "T_COLON",
            "T_COMMA",
            "T_PIPE",
            "T_DIV",
            "T_DOT",
            "T_DOT2",
            "T_DOLLAR",
            "T_EQUAL",
            "T_EQUAL2",
            "T_NOTEQUAL",
            "T_NOTEQUAL2",
            "T_GREATER",
            "T_GREATEREQUAL",
            "T_LESS",
            "T_LESSEQUAL",
            "T_MUL",
            "T_OPEN_B",
            "T_OPEN_P",
            "T_OPEN_SB",
            "T_CLOSE_B",
            "T_CLOSE_P",
            "T_CLOSE_SB",
            "T_SEMICOLON",
            "T_SUB",
            "T_WELL",
            "L_ID",
            "L_S_STRING",
            "L_D_STRING",
            "L_INT",
            "L_DEC",
            "L_WS",
            "L_M_COMMENT",
            "L_S_COMMENT",
            "L_FILE" };
    }

    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;
    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "IFC.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public IFCParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    public static class IfcmodelContext extends ParserRuleContext {
        public List<IsoTagContext> isoTag() {
            return getRuleContexts(IsoTagContext.class);
        }

        public IsoTagContext isoTag(int i) {
            return getRuleContext(IsoTagContext.class, i);
        }

        public TerminalNode T_SEMICOLON() {
            return getToken(IFCParser.T_SEMICOLON, 0);
        }

        public HeaderContext header() {
            return getRuleContext(HeaderContext.class, 0);
        }

        public DataContext data() {
            return getRuleContext(DataContext.class, 0);
        }

        public TerminalNode T_END() {
            return getToken(IFCParser.T_END, 0);
        }

        public TerminalNode T_SUB() {
            return getToken(IFCParser.T_SUB, 0);
        }

        public IfcmodelContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_ifcmodel;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof IFCVisitor) return ((IFCVisitor<? extends T>) visitor)
                .visitIfcmodel(this);
            else return visitor.visitChildren(this);
        }
    }

    public final IfcmodelContext ifcmodel() throws RecognitionException {
        IfcmodelContext _localctx = new IfcmodelContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_ifcmodel);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(34);
                isoTag();
                setState(35);
                match(T_SEMICOLON);
                setState(36);
                header();
                setState(37);
                data();
                setState(38);
                match(T_END);
                setState(39);
                match(T_SUB);
                setState(40);
                isoTag();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class HeaderContext extends ParserRuleContext {
        public TerminalNode T_HEADER() {
            return getToken(IFCParser.T_HEADER, 0);
        }

        public List<TerminalNode> T_SEMICOLON() {
            return getTokens(IFCParser.T_SEMICOLON);
        }

        public TerminalNode T_SEMICOLON(int i) {
            return getToken(IFCParser.T_SEMICOLON, i);
        }

        public TerminalNode T_FILE_DESCRIPTION() {
            return getToken(IFCParser.T_FILE_DESCRIPTION, 0);
        }

        public List<TerminalNode> T_OPEN_P() {
            return getTokens(IFCParser.T_OPEN_P);
        }

        public TerminalNode T_OPEN_P(int i) {
            return getToken(IFCParser.T_OPEN_P, i);
        }

        public List<TerminalNode> T_CLOSE_P() {
            return getTokens(IFCParser.T_CLOSE_P);
        }

        public TerminalNode T_CLOSE_P(int i) {
            return getToken(IFCParser.T_CLOSE_P, i);
        }

        public TerminalNode T_FILE_NAME() {
            return getToken(IFCParser.T_FILE_NAME, 0);
        }

        public TerminalNode T_FILE_SCHEMA() {
            return getToken(IFCParser.T_FILE_SCHEMA, 0);
        }

        public TerminalNode T_ENDSEC() {
            return getToken(IFCParser.T_ENDSEC, 0);
        }

        public List<ExprFuncParamsContext> exprFuncParams() {
            return getRuleContexts(ExprFuncParamsContext.class);
        }

        public ExprFuncParamsContext exprFuncParams(int i) {
            return getRuleContext(ExprFuncParamsContext.class, i);
        }

        public HeaderContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_header;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof IFCVisitor) return ((IFCVisitor<? extends T>) visitor)
                .visitHeader(this);
            else return visitor.visitChildren(this);
        }
    }

    public final HeaderContext header() throws RecognitionException {
        HeaderContext _localctx = new HeaderContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_header);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(42);
                match(T_HEADER);
                setState(43);
                match(T_SEMICOLON);
                setState(44);
                match(T_FILE_DESCRIPTION);
                setState(45);
                match(T_OPEN_P);
                setState(47);
                _errHandler.sync(this);
                switch (getInterpreter().adaptivePredict(_input, 0, _ctx)) {
                    case 1: {
                        setState(46);
                        exprFuncParams();
                    }
                        break;
                }
                setState(49);
                match(T_CLOSE_P);
                setState(50);
                match(T_SEMICOLON);
                setState(51);
                match(T_FILE_NAME);
                setState(52);
                match(T_OPEN_P);
                setState(54);
                _errHandler.sync(this);
                switch (getInterpreter().adaptivePredict(_input, 1, _ctx)) {
                    case 1: {
                        setState(53);
                        exprFuncParams();
                    }
                        break;
                }
                setState(56);
                match(T_CLOSE_P);
                setState(57);
                match(T_SEMICOLON);
                setState(58);
                match(T_FILE_SCHEMA);
                setState(59);
                match(T_OPEN_P);
                setState(61);
                _errHandler.sync(this);
                switch (getInterpreter().adaptivePredict(_input, 2, _ctx)) {
                    case 1: {
                        setState(60);
                        exprFuncParams();
                    }
                        break;
                }
                setState(63);
                match(T_CLOSE_P);
                setState(64);
                match(T_SEMICOLON);
                setState(65);
                match(T_ENDSEC);
                setState(66);
                match(T_SEMICOLON);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class DataContext extends ParserRuleContext {
        public TerminalNode T_DATA() {
            return getToken(IFCParser.T_DATA, 0);
        }

        public List<TerminalNode> T_SEMICOLON() {
            return getTokens(IFCParser.T_SEMICOLON);
        }

        public TerminalNode T_SEMICOLON(int i) {
            return getToken(IFCParser.T_SEMICOLON, i);
        }

        public TerminalNode T_ENDSEC() {
            return getToken(IFCParser.T_ENDSEC, 0);
        }

        public List<DataItemContext> dataItem() {
            return getRuleContexts(DataItemContext.class);
        }

        public DataItemContext dataItem(int i) {
            return getRuleContext(DataItemContext.class, i);
        }

        public DataContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_data;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof IFCVisitor) return ((IFCVisitor<? extends T>) visitor).visitData(
                this
            );
            else return visitor.visitChildren(this);
        }
    }

    public final DataContext data() throws RecognitionException {
        DataContext _localctx = new DataContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_data);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(68);
                match(T_DATA);
                setState(69);
                match(T_SEMICOLON);
                setState(73);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == T_WELL) {
                    {
                        {
                            setState(70);
                            dataItem();
                        }
                    }
                    setState(75);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(76);
                match(T_ENDSEC);
                setState(77);
                match(T_SEMICOLON);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class DataItemContext extends ParserRuleContext {
        public IntNumberContext stepNumber;

        public TerminalNode T_WELL() {
            return getToken(IFCParser.T_WELL, 0);
        }

        public TerminalNode T_EQUAL() {
            return getToken(IFCParser.T_EQUAL, 0);
        }

        public ExprFuncContext exprFunc() {
            return getRuleContext(ExprFuncContext.class, 0);
        }

        public TerminalNode T_SEMICOLON() {
            return getToken(IFCParser.T_SEMICOLON, 0);
        }

        public IntNumberContext intNumber() {
            return getRuleContext(IntNumberContext.class, 0);
        }

        public DataItemContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_dataItem;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof IFCVisitor) return ((IFCVisitor<? extends T>) visitor)
                .visitDataItem(this);
            else return visitor.visitChildren(this);
        }
    }

    public final DataItemContext dataItem() throws RecognitionException {
        DataItemContext _localctx = new DataItemContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_dataItem);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(79);
                match(T_WELL);
                setState(80);
                ((DataItemContext) _localctx).stepNumber = intNumber();
                setState(81);
                match(T_EQUAL);
                setState(82);
                exprFunc();
                setState(83);
                match(T_SEMICOLON);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class IsoTagContext extends ParserRuleContext {
        public TerminalNode T_ISO_10303_21() {
            return getToken(IFCParser.T_ISO_10303_21, 0);
        }

        public IsoTagContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_isoTag;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof IFCVisitor) return ((IFCVisitor<? extends T>) visitor)
                .visitIsoTag(this);
            else return visitor.visitChildren(this);
        }
    }

    public final IsoTagContext isoTag() throws RecognitionException {
        IsoTagContext _localctx = new IsoTagContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_isoTag);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(85);
                match(T_ISO_10303_21);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ExprContext extends ParserRuleContext {
        public ExprFuncContext exprFunc() {
            return getRuleContext(ExprFuncContext.class, 0);
        }

        public ExprAtomContext exprAtom() {
            return getRuleContext(ExprAtomContext.class, 0);
        }

        public TerminalNode T_WELL() {
            return getToken(IFCParser.T_WELL, 0);
        }

        public IntNumberContext intNumber() {
            return getRuleContext(IntNumberContext.class, 0);
        }

        public List<TerminalNode> T_DOT() {
            return getTokens(IFCParser.T_DOT);
        }

        public TerminalNode T_DOT(int i) {
            return getToken(IFCParser.T_DOT, i);
        }

        public IdentContext ident() {
            return getRuleContext(IdentContext.class, 0);
        }

        public TerminalNode T_OPEN_P() {
            return getToken(IFCParser.T_OPEN_P, 0);
        }

        public List<ExprContext> expr() {
            return getRuleContexts(ExprContext.class);
        }

        public ExprContext expr(int i) {
            return getRuleContext(ExprContext.class, i);
        }

        public TerminalNode T_CLOSE_P() {
            return getToken(IFCParser.T_CLOSE_P, 0);
        }

        public List<TerminalNode> T_COMMA() {
            return getTokens(IFCParser.T_COMMA);
        }

        public TerminalNode T_COMMA(int i) {
            return getToken(IFCParser.T_COMMA, i);
        }

        public TerminalNode T_MUL() {
            return getToken(IFCParser.T_MUL, 0);
        }

        public TerminalNode T_DIV() {
            return getToken(IFCParser.T_DIV, 0);
        }

        public TerminalNode T_ADD() {
            return getToken(IFCParser.T_ADD, 0);
        }

        public TerminalNode T_SUB() {
            return getToken(IFCParser.T_SUB, 0);
        }

        public ExprContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_expr;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof IFCVisitor) return ((IFCVisitor<? extends T>) visitor).visitExpr(
                this
            );
            else return visitor.visitChildren(this);
        }
    }

    public final ExprContext expr() throws RecognitionException {
        return expr(0);
    }

    private ExprContext expr(int _p) throws RecognitionException {
        ParserRuleContext _parentctx = _ctx;
        int _parentState = getState();
        ExprContext _localctx = new ExprContext(_ctx, _parentState);
        ExprContext _prevctx = _localctx;
        int _startState = 10;
        enterRecursionRule(_localctx, 10, RULE_expr, _p);
        int _la;
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(107);
                _errHandler.sync(this);
                switch (getInterpreter().adaptivePredict(_input, 5, _ctx)) {
                    case 1: {
                        setState(88);
                        exprFunc();
                    }
                        break;
                    case 2: {
                        setState(89);
                        exprAtom();
                    }
                        break;
                    case 3: {
                        setState(90);
                        match(T_WELL);
                        setState(91);
                        intNumber();
                    }
                        break;
                    case 4: {
                        setState(92);
                        match(T_DOT);
                        setState(93);
                        ident();
                        setState(94);
                        match(T_DOT);
                    }
                        break;
                    case 5: {
                        setState(96);
                        match(T_OPEN_P);
                        setState(97);
                        expr(0);
                        setState(102);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        while (_la == T_COMMA) {
                            {
                                {
                                    setState(98);
                                    match(T_COMMA);
                                    setState(99);
                                    expr(0);
                                }
                            }
                            setState(104);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        }
                        setState(105);
                        match(T_CLOSE_P);
                    }
                        break;
                }
                _ctx.stop = _input.LT(-1);
                setState(123);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 7, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        if (_parseListeners != null) triggerExitRuleEvent();
                        _prevctx = _localctx;
                        {
                            setState(121);
                            _errHandler.sync(this);
                            switch (getInterpreter().adaptivePredict(_input, 6, _ctx)) {
                                case 1: {
                                    _localctx = new ExprContext(_parentctx, _parentState);
                                    pushNewRecursionContext(_localctx, _startState, RULE_expr);
                                    setState(109);
                                    if (!(precpred(_ctx, 9))) throw new FailedPredicateException(
                                        this,
                                        "precpred(_ctx, 9)"
                                    );
                                    setState(110);
                                    match(T_MUL);
                                    setState(111);
                                    expr(10);
                                }
                                    break;
                                case 2: {
                                    _localctx = new ExprContext(_parentctx, _parentState);
                                    pushNewRecursionContext(_localctx, _startState, RULE_expr);
                                    setState(112);
                                    if (!(precpred(_ctx, 8))) throw new FailedPredicateException(
                                        this,
                                        "precpred(_ctx, 8)"
                                    );
                                    setState(113);
                                    match(T_DIV);
                                    setState(114);
                                    expr(9);
                                }
                                    break;
                                case 3: {
                                    _localctx = new ExprContext(_parentctx, _parentState);
                                    pushNewRecursionContext(_localctx, _startState, RULE_expr);
                                    setState(115);
                                    if (!(precpred(_ctx, 7))) throw new FailedPredicateException(
                                        this,
                                        "precpred(_ctx, 7)"
                                    );
                                    setState(116);
                                    match(T_ADD);
                                    setState(117);
                                    expr(8);
                                }
                                    break;
                                case 4: {
                                    _localctx = new ExprContext(_parentctx, _parentState);
                                    pushNewRecursionContext(_localctx, _startState, RULE_expr);
                                    setState(118);
                                    if (!(precpred(_ctx, 6))) throw new FailedPredicateException(
                                        this,
                                        "precpred(_ctx, 6)"
                                    );
                                    setState(119);
                                    match(T_SUB);
                                    setState(120);
                                    expr(7);
                                }
                                    break;
                            }
                        }
                    }
                    setState(125);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 7, _ctx);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            unrollRecursionContexts(_parentctx);
        }
        return _localctx;
    }

    public static class ExprAtomContext extends ParserRuleContext {
        public BoolLiteralContext boolLiteral() {
            return getRuleContext(BoolLiteralContext.class, 0);
        }

        public IdentContext ident() {
            return getRuleContext(IdentContext.class, 0);
        }

        public StringContext string() {
            return getRuleContext(StringContext.class, 0);
        }

        public DecNumberContext decNumber() {
            return getRuleContext(DecNumberContext.class, 0);
        }

        public IntNumberContext intNumber() {
            return getRuleContext(IntNumberContext.class, 0);
        }

        public ScientificCountingNumberContext scientificCountingNumber() {
            return getRuleContext(ScientificCountingNumberContext.class, 0);
        }

        public NullConstContext nullConst() {
            return getRuleContext(NullConstContext.class, 0);
        }

        public ExprAtomContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_exprAtom;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof IFCVisitor) return ((IFCVisitor<? extends T>) visitor)
                .visitExprAtom(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ExprAtomContext exprAtom() throws RecognitionException {
        ExprAtomContext _localctx = new ExprAtomContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_exprAtom);
        try {
            setState(133);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 8, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1); {
                    setState(126);
                    boolLiteral();
                }
                    break;
                case 2:
                    enterOuterAlt(_localctx, 2); {
                    setState(127);
                    ident();
                }
                    break;
                case 3:
                    enterOuterAlt(_localctx, 3); {
                    setState(128);
                    string();
                }
                    break;
                case 4:
                    enterOuterAlt(_localctx, 4); {
                    setState(129);
                    decNumber();
                }
                    break;
                case 5:
                    enterOuterAlt(_localctx, 5); {
                    setState(130);
                    intNumber();
                }
                    break;
                case 6:
                    enterOuterAlt(_localctx, 6); {
                    setState(131);
                    scientificCountingNumber();
                }
                    break;
                case 7:
                    enterOuterAlt(_localctx, 7); {
                    setState(132);
                    nullConst();
                }
                    break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ExprFuncContext extends ParserRuleContext {
        public IdentContext ident() {
            return getRuleContext(IdentContext.class, 0);
        }

        public TerminalNode T_OPEN_P() {
            return getToken(IFCParser.T_OPEN_P, 0);
        }

        public TerminalNode T_CLOSE_P() {
            return getToken(IFCParser.T_CLOSE_P, 0);
        }

        public ExprFuncParamsContext exprFuncParams() {
            return getRuleContext(ExprFuncParamsContext.class, 0);
        }

        public ExprFuncContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_exprFunc;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof IFCVisitor) return ((IFCVisitor<? extends T>) visitor)
                .visitExprFunc(this);
            else return visitor.visitChildren(this);
        }
    }
